--- a/index.html
+++ b/index.html
@@ -19,23 +19,39 @@
   </head>
 
   <body>
-    <nav class="navbar">
-      <div class="navbar__logo">
-        <i class="fas fa-robot"></i>
-        <a href="">셈틀쟁이</a>
-      </div>
-      <ul class="navbar__menu">
-        <a href="">공지사항</a>
-        <a href="">자유게시판</a>
-        <a href="">스터디</a>
-        <a href="">책 대여</a>
-        <a href="">공모전</a>
-      </ul>
+    <header>
+      <a href="#" class="logo"> <i class="fas fa-robot"></i> 셈틀쟁이 </a>
 
-      <a href="#" class="navbar__tgl">
-        <i class="fas fa-bars"></i>
-      </a>
-    </nav>
+      <nav class="navbar">
+        <a href="#">공지사항</a>
+        <a href="#">자유게시판</a>
+        <a href="#">스터디</a>
+        <a href="#">책 대여</a>
+        <a href="#">공모전</a>
+      </nav>
+
+      <div class="icons">
+        <i class="fas fa-bars" id="menu-bars"></i>
+      </div>
+    </header>
+
+    <section class="home">
+      <div class="container"></div>
+    </section>
+
+    <section class="calender">
+      <div class="calender-box"></div>
+    </section>
+
+    <section class="notice">
+      <div class="notice-box"></div>
+    </section>
+
+    <section class="book">
+      <div class="book-box"></div>
+    </section>
+
+    <footer class="footer"></footer>
   </body>
 
   <script src="js/script.js" defer></script>
