--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
     </section>
 
     <section class="calender">
+      <div class="calender-subject">셈틀 일정</div>
       <div class="calender-box"></div>
     </section>
 
     <section class="notice">
+      <div class="notice-subject">공지사항</div>
       <div class="notice-box"></div>
     </section>
 
     <section class="book">
+      <div class="book-subject">책 대여</div>
       <div class="book-box"></div>
     </section>
 
