--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     </header>
 
     <section class="home">
-      <div class="container"></div>
+      <div class="home-photo">
+        <img src="images/home.jpg" alt="" />
+      </div>
     </section>
 
     <section class="calender">
@@ -46,7 +48,25 @@
 
     <section class="notice">
       <div class="notice-subject">공지사항</div>
-      <div class="notice-box"></div>
+      <div class="notice-box">
+        <div class="notice-container notice-container1">
+          <div class="notice-heading notice-heading1">
+            <h3>셈틀 이용하는 방법은?</h3>
+            <i class="fas fa-search"></i>
+          </div>
+          <p class="notice-content notice-content1">
+            안녕하세요. 셈틀쟁이입니다. 환영해요!! 셈-하!!
+          </p>
+        </div>
+
+        <div class="notice-container notice-container2">
+          <div class="notice-heading notice-heading2">
+            <h3>셈틀은 어떤 학회인가요?</h3>
+            <i class="fas fa-search"></i>
+          </div>
+          <p class="notice-content notice-content2">셈틀 방가방가</p>
+        </div>
+      </div>
     </section>
 
     <section class="book">
