--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <link
       rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
+
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
@@ -20,7 +25,9 @@
 
   <body>
     <header>
-      <a href="#" class="logo"> <i class="fas fa-robot"></i> 셈틀쟁이 </a>
+      <a href="#" class="logo">
+        <i class="fas fa-robot logo_img"></i> 셈틀쟁이
+      </a>
 
       <nav class="navbar">
         <a href="#">공지사항</a>
@@ -48,34 +55,122 @@
 
     <section class="notice">
       <div class="notice-subject">공지사항</div>
-      <div class="notice-box">
-        <div class="notice-container notice-container1">
-          <div class="notice-heading notice-heading1">
-            <h3>셈틀 이용하는 방법은?</h3>
-            <i class="fas fa-search"></i>
-          </div>
-          <p class="notice-content notice-content1">
-            안녕하세요. 셈틀쟁이입니다. 환영해요!! 셈-하!!
-          </p>
-        </div>
 
-        <div class="notice-container notice-container2">
-          <div class="notice-heading notice-heading2">
-            <h3>셈틀은 어떤 학회인가요?</h3>
-            <i class="fas fa-search"></i>
-          </div>
-          <p class="notice-content notice-content2">셈틀 방가방가</p>
+      <div class="notice-box notice-box1">
+        <div class="notice-heading notice-heading1">
+          <h3>셈틀쟁이는 어떤 학회인가요?</h3>
+          <i class="fas fa-angle-down"></i>
+        </div>
+        <div class="notice-content notice-content1">
+          <p>안녕하세요. 셈틀쟁이입니다. 환영해요!! 셈-하!!</p>
+        </div>
+      </div>
+
+      <div class="notice-box notice-box2">
+        <div class="notice-heading notice-heading2">
+          <h3>셈틀쟁이 웹은 어떻게 이용하나요?</h3>
+          <i class="fas fa-angle-down"></i>
+        </div>
+        <div class="notice-content notice-content2">
+          <p>안녕하세요. 셈틀쟁이입니다. 환영해요!! 셈-하!!</p>
         </div>
       </div>
     </section>
 
     <section class="book">
       <div class="book-subject">책 대여</div>
-      <div class="book-box"></div>
+
+      <div class="swiper book-box">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="images/pic-1.png" alt="" />
+            </div>
+            <div class="content">
+              <h3>c언어</h3>
+              <div class="content_info">
+                <h2>김대현</h2>
+                <h2>/</h2>
+                <h2>출판사</h2>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="images/pic-2.png" alt="" />
+            </div>
+            <div class="content">
+              <h3>c언어</h3>
+              <div class="content_info">
+                <h2>김대현</h2>
+                <h2>/</h2>
+                <h2>출판사</h2>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="images/pic-3.png" alt="" />
+            </div>
+            <div class="content">
+              <h3>c언어</h3>
+              <div class="content_info">
+                <h2>김대현</h2>
+                <h2>/</h2>
+                <h2>출판사</h2>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="images/pic-4.png" alt="" />
+            </div>
+            <div class="content">
+              <h3>c언어</h3>
+              <div class="content_info">
+                <h2>김대현</h2>
+                <h2>/</h2>
+                <h2>출판사</h2>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="images/pic-4.png" alt="" />
+            </div>
+            <div class="content">
+              <h3>c언어</h3>
+              <div class="content_info">
+                <h2>김대현</h2>
+                <h2>/</h2>
+                <h2>출판사</h2>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="images/pic-4.png" alt="" />
+            </div>
+            <div class="content">
+              <h3>c언어</h3>
+              <div class="content_info">
+                <h2>김대현</h2>
+                <h2>/</h2>
+                <h2>출판사</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="footer"></footer>
   </body>
-
+  <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/script.js" defer></script>
 </html>
