--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="book-subject">책 대여</div>
 
       <div class="swiper book-box">
-        <div class="swiper-wrapper">
+        <div class="swiper-wrapper book-wrapper">
           <div class="swiper-slide slide">
             <div class="image">
               <img src="images/pic-1.png" alt="" />
