--- a/index.html
+++ b/index.html
@@ -49,12 +49,18 @@
     </section>
 
     <section class="calender">
-      <div class="calender-subject">셈틀 일정</div>
+      <div class="calender-subject">
+        <i class="far fa-calendar-alt"></i>
+        <span>셈틀 일정</span>
+      </div>
       <div class="calender-box"></div>
     </section>
 
     <section class="notice">
-      <div class="notice-subject">공지사항</div>
+      <div class="notice-subject">
+        <i class="fas fa-bookmark"></i>
+        <span>공지사항</span>
+      </div>
 
       <div class="notice-box notice-box1">
         <div class="notice-heading notice-heading1">
@@ -78,7 +84,10 @@
     </section>
 
     <section class="book">
-      <div class="book-subject">책 대여</div>
+      <div class="book-subject">
+        <i class="fas fa-book-open"></i>
+        <span> 책 대여</span>
+      </div>
 
       <div class="swiper book-box">
         <div class="swiper-wrapper book-wrapper">
@@ -169,7 +178,18 @@
       </div>
     </section>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer-box">
+        <div class="footer-content">
+          셈틀쟁이 : 가톨릭대 성심교정 다솔관 D410
+        </div>
+        <div class="footer-content">회장 김대현 010-3249-7669</div>
+        <div class="footer-content">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-instagram"></i>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/script.js" defer></script>
