--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </nav>
 
       <div class="icons">
+        <a href="#" class="login">LOGIN</a>
         <i class="fas fa-bars" id="menu-bars"></i>
       </div>
     </header>
@@ -175,6 +176,15 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="quick">
+      <div class="quick-box">
+        <i class="fas fa-chalkboard"></i>
+        <i class="fas fa-chalkboard"></i>
+        <i class="fas fa-chalkboard"></i>
+        <i class="fas fa-chalkboard"></i>
       </div>
     </section>
 
