--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
 
       <div class="icons">
-        <a href="#" class="login">LOGIN</a>
+        <a href="#" class="sm-login">LOGIN</a>
         <i class="fas fa-bars" id="menu-bars"></i>
       </div>
     </header>
@@ -49,12 +49,40 @@
       </div>
     </section>
 
-    <section class="calender">
-      <div class="calender-subject">
+    <section class="login">
+      <div class="login-box">
+        <div class="login-subject">셈하-!!</div>
+        <div class="login-header">
+          <h3>김대현</h3>
+          <span> 님 환영합니다 :)</span>
+        </div>
+        <div class="login-content">
+          <div class="login-txt">
+            <span>작성한 글 : </span>
+            <span>6</span>
+          </div>
+          <div class="login-txt">
+            <span>대여한 책 : </span>
+            <span>3</span>
+          </div>
+        </div>
+        <div class="login-content2">
+          <div class="login-txt2">
+            <span>내 정보</span>
+          </div>
+          <div class="login-txt2">
+            <span>로그아웃</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="calendar">
+      <div class="calendar-subject">
         <i class="far fa-calendar-alt"></i>
         <span>셈틀 일정</span>
       </div>
-      <div class="calender-box"></div>
+      <div class="calendar-box"></div>
     </section>
 
     <section class="notice">
@@ -176,15 +204,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="quick">
-      <div class="quick-box">
-        <i class="fas fa-chalkboard"></i>
-        <i class="fas fa-chalkboard"></i>
-        <i class="fas fa-chalkboard"></i>
-        <i class="fas fa-chalkboard"></i>
       </div>
     </section>
 
