--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SemtleWeb</title>
-
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap"
       rel="stylesheet"
@@ -20,17 +20,16 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <header>
-      <a href="#" class="logo">
+      <a href="index.html" class="logo">
         <i class="fas fa-robot logo_img"></i> 셈틀쟁이
       </a>
 
       <nav class="navbar">
-        <a href="#">공지사항</a>
+        <a href="notice.html">공지사항</a>
         <a href="#">자유게시판</a>
         <a href="#">스터디</a>
         <a href="#">책 대여</a>
