--- a/notice.html
+++ b/notice.html
@@ -47,13 +47,14 @@
     <section class="noticeboard">
       <div class="noticeboard-box">
         <div class="notice-write">
+          <span>공지 게시판</span>
           <i class="fas fa-pencil-alt"></i>
         </div>
 
         <div class="notice-content">
           <div class="notice-content-head">
             <span>1</span>
-            <h3>셈틀 회원 모집합니다 :)</h3>
+            <span>셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
@@ -64,7 +65,7 @@
         <div class="notice-content">
           <div class="notice-content-head">
             <span>2</span>
-            <h3>셈틀 회원 모집합니다 :)</h3>
+            <span>셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
@@ -75,7 +76,7 @@
         <div class="notice-content">
           <div class="notice-content-head">
             <span>3</span>
-            <h3>셈틀 회원 모집합니다 :)</h3>
+            <span>셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
@@ -86,7 +87,7 @@
         <div class="notice-content">
           <div class="notice-content-head">
             <span>4</span>
-            <h3>셈틀 회원 모집합니다 :)</h3>
+            <span>셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
@@ -97,7 +98,7 @@
         <div class="notice-content">
           <div class="notice-content-head">
             <span>5</span>
-            <h3>셈틀 회원 모집합니다 :)</h3>
+            <span>셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
