--- a/notice.html
+++ b/notice.html
@@ -58,6 +58,7 @@
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
+            <span>|</span>
             <span>01.06</span>
           </div>
         </div>
@@ -69,6 +70,7 @@
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
+            <span>|</span>
             <span>01.06</span>
           </div>
         </div>
@@ -80,6 +82,7 @@
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
+            <span>|</span>
             <span>01.06</span>
           </div>
         </div>
@@ -91,6 +94,7 @@
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
+            <span>|</span>
             <span>01.06</span>
           </div>
         </div>
@@ -102,6 +106,7 @@
           </div>
           <div class="notice-content-foot">
             <span>회장</span>
+            <span>|</span>
             <span>01.06</span>
           </div>
         </div>
