--- a/index.html
+++ b/index.html
@@ -24,70 +24,51 @@
 
   <body>
     <header>
-      <a href="index.html" class="logo">
-        <i class="fas fa-robot logo_img"></i> 셈틀쟁이
-      </a>
+      <a href=""></a>
 
       <nav class="navbar">
         <a href="notice.html">공지사항</a>
-        <a href="#">자유게시판</a>
+        <a href="board.html">자유게시판</a>
         <a href="#">스터디</a>
         <a href="#">책 대여</a>
         <a href="#">공모전</a>
       </nav>
 
       <div class="icons">
-        <a href="#" class="sm-login">LOGIN</a>
+        <i class="fas fa-user sm-login"></i>
         <i class="fas fa-bars" id="menu-bars"></i>
       </div>
     </header>
 
     <section class="home">
-      <div class="home-photo">
-        <img src="images/home.jpg" alt="" />
+      <div class="home-main">
+        <i class="fas fa-user sm-login"></i>
+        <h3>셈틀쟁이</h3>
       </div>
     </section>
 
     <section class="login">
       <div class="login-box">
-        <div class="login-subject">셈하-!!</div>
+        <div class="login-subject">셈하 :)</div>
         <div class="login-header">
           <h3>김대현</h3>
-          <span> 님 환영합니다 :)</span>
-        </div>
-        <div class="login-content">
-          <div class="login-txt">
-            <span>작성한 글 : </span>
-            <span>6</span>
-          </div>
-          <div class="login-txt">
-            <span>대여한 책 : </span>
-            <span>3</span>
-          </div>
-        </div>
-        <div class="login-content2">
-          <div class="login-txt2">
-            <span>내 정보</span>
-          </div>
-          <div class="login-txt2">
-            <span>로그아웃</span>
-          </div>
+          <span> 님 환영합니다</span>
         </div>
       </div>
     </section>
 
     <section class="calendar">
       <div class="calendar-subject">
-        <i class="far fa-calendar-alt"></i>
         <span>셈틀 일정</span>
+        <i class="fas fa-angle-right"></i>
       </div>
       <div class="calendar-box"></div>
     </section>
 
     <section class="notice">
       <div class="notice-subject">
-        <i class="fas fa-bookmark"></i>
-        <span>공지사항</span>
+        <a href="notice.html"><span>공지사항</span></a>
+        <a href="notice.html"><i class="fas fa-angle-right"></i></a>
       </div>
 
       <div class="notice-box notice-box1">
@@ -113,8 +94,8 @@
 
     <section class="book">
       <div class="book-subject">
-        <i class="fas fa-book-open"></i>
         <span> 책 대여</span>
+        <i class="fas fa-angle-right"></i>
       </div>
 
       <div class="swiper book-box">
