--- a/notice.html
+++ b/notice.html
@@ -26,88 +26,59 @@
     <section class="statusbar">
       <a href="index.html"><i class="fas fa-angle-left"></i></a>
       <span>공지사항</span>
-      <span></span>
+      <i class="fas fa-bars" id="menu-bars"></i>
     </section>
 
     <section class="heading">
       <div class="heading-box">
-        <div class="heading-content">
-          <i class="fas fa-search"></i>
-          <span>필독! 공지사항 읽어주세요</span>
-          <span></span>
-        </div>
-        <div class="heading-content">
-          <i class="fas fa-search"></i>
-          <span>필독! 공지사항 읽어주라</span>
-          <span></span>
-        </div>
+        <span>printf("공지사항 꼭 확인해주세요")</span>
       </div>
     </section>
 
     <section class="noticeboard">
       <div class="noticeboard-box">
-        <div class="notice-write">
-          <span>공지 게시판</span>
-          <i class="fas fa-pencil-alt"></i>
-        </div>
-
         <div class="notice-content">
           <div class="notice-content-head">
-            <span>1</span>
-            <span>셈틀 회원 모집합니다 :)</span>
+            <span>[공지] 셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
-            <span>회장</span>
-            <span>|</span>
-            <span>01.06</span>
+            <span>2022.01.06</span>
           </div>
         </div>
 
         <div class="notice-content">
           <div class="notice-content-head">
-            <span>2</span>
-            <span>셈틀 회원 모집합니다 :)</span>
+            <span>[공지] 셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
-            <span>회장</span>
-            <span>|</span>
-            <span>01.06</span>
+            <span>2022.01.06</span>
           </div>
         </div>
 
         <div class="notice-content">
           <div class="notice-content-head">
-            <span>3</span>
-            <span>셈틀 회원 모집합니다 :)</span>
+            <span>[공지] 셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
-            <span>회장</span>
-            <span>|</span>
-            <span>01.06</span>
+            <span>2022.01.06</span>
           </div>
         </div>
 
         <div class="notice-content">
           <div class="notice-content-head">
-            <span>4</span>
-            <span>셈틀 회원 모집합니다 :)</span>
+            <span>[공지] 셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
-            <span>회장</span>
-            <span>|</span>
-            <span>01.06</span>
+            <span>2022.01.06</span>
           </div>
         </div>
 
         <div class="notice-content">
           <div class="notice-content-head">
-            <span>5</span>
-            <span>셈틀 회원 모집합니다 :)</span>
+            <span>[공지] 셈틀 회원 모집합니다 :)</span>
           </div>
           <div class="notice-content-foot">
-            <span>회장</span>
-            <span>|</span>
-            <span>01.06</span>
+            <span>2022.01.06</span>
           </div>
         </div>
       </div>
