--- a/index.html
+++ b/index.html
@@ -42,17 +42,22 @@
 
     <section class="home">
       <div class="home-main">
-        <i class="fas fa-user sm-login"></i>
+        <img src="images/logo.PNG" alt="" />
         <h3>셈틀쟁이</h3>
       </div>
     </section>
 
     <section class="login">
       <div class="login-box">
-        <div class="login-subject">셈하 :)</div>
-        <div class="login-header">
-          <h3>김대현</h3>
-          <span> 님 환영합니다</span>
+        <div class="login-main1">
+          <div class="login-subject">셈하 :)</div>
+          <div class="login-header">
+            <h3>김대현</h3>
+            <span> 님 환영합니다</span>
+          </div>
+        </div>
+        <div class="login-main2">
+          <img src="images/char.PNG" alt="" />
         </div>
       </div>
     </section>
