--- a/board.html
+++ b/board.html
@@ -35,50 +35,147 @@
       </div>
     </section>
 
-    <section class="noticeboard">
-      <div class="noticeboard-box">
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
+    <section class="talkboard">
+      <div class="talkboard-box">
+        <div class="talk-content">
+          <div class="talk-content-head">
+            <img src="images/char.PNG" alt="" />
+            <div class="talk-content-head2">
+              <span>역곡불주먹</span>
+              <span>01.08</span>
+            </div>
           </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
+          <div class="talk-content-main">
+            <span
+              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
+              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
+            >
           </div>
-        </div>
-
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
-          </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
-          </div>
-        </div>
-
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
-          </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
+          <div class="talk-content-foot">
+            <div class="talk-content-foot-etc">
+              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
+            </div>
           </div>
         </div>
+      </div>
 
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
+      <div class="talkboard-box">
+        <div class="talk-content">
+          <div class="talk-content-head">
+            <img src="images/char.PNG" alt="" />
+            <div class="talk-content-head2">
+              <span>역곡불주먹</span>
+              <span>01.08</span>
+            </div>
           </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
+          <div class="talk-content-main">
+            <span
+              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
+              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
+            >
+          </div>
+          <div class="talk-content-foot">
+            <div class="talk-content-foot-etc">
+              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
+            </div>
           </div>
         </div>
+      </div>
 
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
+      <div class="talkboard-box">
+        <div class="talk-content">
+          <div class="talk-content-head">
+            <img src="images/char.PNG" alt="" />
+            <div class="talk-content-head2">
+              <span>역곡불주먹</span>
+              <span>01.08</span>
+            </div>
           </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
+          <div class="talk-content-main">
+            <span
+              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
+              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
+            >
+          </div>
+          <div class="talk-content-foot">
+            <div class="talk-content-foot-etc">
+              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="talkboard-box">
+        <div class="talk-content">
+          <div class="talk-content-head">
+            <img src="images/char.PNG" alt="" />
+            <div class="talk-content-head2">
+              <span>역곡불주먹</span>
+              <span>01.08</span>
+            </div>
+          </div>
+          <div class="talk-content-main">
+            <span
+              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
+              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세동해물과
+              백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화
+              삼천리 화려강산 대한사람 대한으로 길이 보전하세 동해물과 백두산이
+              마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화 삼천리
+              화려강산 대한사람 대한으로 길이 보전하세</span
+            >
+          </div>
+          <div class="talk-content-foot">
+            <div class="talk-content-foot-etc">
+              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="talkboard-box">
+        <div class="talk-content">
+          <div class="talk-content-head">
+            <img src="images/char.PNG" alt="" />
+            <div class="talk-content-head2">
+              <span>역곡불주먹</span>
+              <span>01.08</span>
+            </div>
+          </div>
+          <div class="talk-content-main">
+            <span
+              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
+              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
+            >
+          </div>
+          <div class="talk-content-foot">
+            <div class="talk-content-foot-etc">
+              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="talkboard-box">
+        <div class="talk-content">
+          <div class="talk-content-head">
+            <img src="images/char.PNG" alt="" />
+            <div class="talk-content-head2">
+              <span>역곡불주먹</span>
+              <span>01.08</span>
+            </div>
+          </div>
+          <div class="talk-content-main">
+            <span
+              >동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
+              무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세 동해물과
+              백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세 무궁화
+              삼천리 화려강산 대한사람 대한으로 길이 보전하세</span
+            >
+          </div>
+          <div class="talk-content-foot">
+            <div class="talk-content-foot-etc">
+              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
+            </div>
           </div>
         </div>
       </div>
