--- a/board.html
+++ b/board.html
@@ -36,6 +36,9 @@
     </section>
 
     <section class="talkboard">
+      <div class="talkboard-head">
+        <span>글쓰기</span>
+      </div>
       <div class="talkboard-box">
         <div class="talk-content">
           <div class="talk-content-head">
