--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="notice.html">공지사항</a>
         <a href="board.html">자유게시판</a>
         <a href="study.html">스터디룸</a>
-        <a href="#">책 대여</a>
+        <a href="book.html">책 대여</a>
         <a href="#">공모전</a>
       </nav>
 
