--- a/notice.html
+++ b/notice.html
@@ -37,14 +37,16 @@
 
     <section class="noticeboard">
       <div class="noticeboard-box">
-        <div class="notice-content">
-          <div class="notice-content-head">
-            <span>[공지] 셈틀 회원 모집합니다 :)</span>
+        <a href="notice_text.html">
+          <div class="notice-content">
+            <div class="notice-content-head">
+              <span>[공지] 셈틀 회원 모집합니다 :)</span>
+            </div>
+            <div class="notice-content-foot">
+              <span>2022.01.06</span>
+            </div>
           </div>
-          <div class="notice-content-foot">
-            <span>2022.01.06</span>
-          </div>
-        </div>
+        </a>
 
         <div class="notice-content">
           <div class="notice-content-head">
