--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
     </section>
 
-    <section class="book">
+    <div class="book">
       <div class="book-subject">
         <span> 책 대여</span>
         <i class="fas fa-angle-right"></i>
@@ -190,7 +190,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <footer class="footer">
       <div class="footer-box">
