--- a/notice_text.html
+++ b/notice_text.html
@@ -36,21 +36,14 @@
             <img src="images/char.PNG" alt="" />
             <div class="notice_text-content-head2">
               <span>[공지] 2022 셈틀 회원 모집합니다 :)</span>
-              <span>01.08</span>
+              <span>회장 | 01.08</span>
             </div>
           </div>
           <div class="notice_text-content-main">
-            <span
-              >2022 셈틀 회원 모집! 1~2월 2022 셈틀 회원 모집! 1~2월 2022 셈틀
-              회원 모집! 1~2월 2022 셈틀 회원 모집! 1~2월 2022 셈틀 회원 모집!
-              1~2월 2022 셈틀 회원 모집! 1~2월 2022 셈틀 회원 모집! 1~2월 2022
-              셈틀 회원 모집! 1~2월 2022 셈틀 회원 모집! 1~2월 2022 셈틀 회원
-              모집! 1~2월 2022 셈틀 회원 모집! 1~2월 2022 셈틀 회원 모집! 1~2월
-              2022 셈틀 회원 모집! 1~2월 2022 셈틀 회원 모집! 1~2월 2022 셈틀
-              회원 모집! 1~2월 2022 셈틀 회원 모집! 1~2월 2022 셈틀 회원 모집!
-              1~2월 2022 셈틀 회원 모집! 1~2월 2022 셈틀 회원 모집! 1~2월 2022
-              셈틀 회원 모집! 1~2월
-            </span>
+            <pre>
+2022 셈틀 회원 모집! 1~2월 모집 모집!
+              많은 신청 부탁드립니당~
+            </pre>
           </div>
           <div class="notice_text-content-foot">
             <div class="notice_text-content-foot-etc"></div>
