--- a/board.html
+++ b/board.html
@@ -37,7 +37,7 @@
 
     <section class="talkboard">
       <div class="talkboard-head">
-        <span>글쓰기</span>
+        <a href="board_text.html"><span>글쓰기</span></a>
       </div>
       <div class="talkboard-box">
         <div class="talk-content">
