--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </nav>
 
       <div class="icons">
-        <i class="fas fa-user sm-login"></i>
+        <i class="fas fa-user" id="sm-login"></i>
         <i class="fas fa-bars" id="menu-bars"></i>
       </div>
     </header>
