--- a/study.html
+++ b/study.html
@@ -23,11 +23,23 @@
   </head>
 
   <body>
-    <section class="statusbar">
-      <a href="index.html"><i class="fas fa-angle-left"></i></a>
-      <span>스터디룸</span>
-      <i class="fas fa-bars" id="menu-bars"></i>
-    </section>
+    <header>
+      <a href="javascript:history.back();" id="header-before"
+        ><i class="fas fa-angle-left"></i
+      ></a>
+
+      <nav class="navbar">
+        <a href="notice.html">공지사항</a>
+        <a href="board.html">자유게시판</a>
+        <a href="study.html">스터디룸</a>
+        <a href="book.html">책 대여</a>
+        <a href="#">공모전</a>
+      </nav>
+
+      <span id="header-name">스터디룸</span>
+
+      <i class="fas fa-bars header-menu" id="menu-bars"></i>
+    </header>
 
     <section class="heading">
       <div class="heading-box">
