--- a/book.html
+++ b/book.html
@@ -49,7 +49,12 @@
 
     <section class="bookboard">
       <div class="book-head">
-        <input type="text" placeholder="책 제목을 검색하세요" />
+        <input
+          type="text"
+          placeholder="책 제목을 검색하세요"
+          onclick="this.placeholder=''"
+          onblur="this.placeholder = '책 제목을 검색하세요'"
+        />
         <i class="fas fa-search"></i>
       </div>
 
