--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </nav>
 
       <div class="icons">
-        <i class="fas fa-user" id="sm-login"></i>
+        <a href="login.html"><i class="fas fa-user" id="sm-login"></i></a>
         <i class="fas fa-bars" id="menu-bars"></i>
       </div>
     </header>
@@ -47,16 +47,16 @@
       </div>
     </section>
 
-    <section class="login">
-      <div class="login-box">
-        <div class="login-main1">
-          <div class="login-subject">셈하 :)</div>
-          <div class="login-header">
+    <section class="member">
+      <div class="member-box">
+        <div class="member-main1">
+          <div class="member-subject">셈하 :)</div>
+          <div class="member-header">
             <h3>김대현</h3>
             <span> 님 환영합니다</span>
           </div>
         </div>
-        <div class="login-main2">
+        <div class="member-main2">
           <img src="images/char.PNG" alt="" />
         </div>
       </div>
