--- a/board.html
+++ b/board.html
@@ -36,7 +36,7 @@
         <a href="#">공모전</a>
       </nav>
 
-      <span id="header-name">자유게시판</span>
+      <a href="index.html"><span id="header-name">셈틀쟁이</span></a>
 
       <i class="fas fa-bars header-menu" id="menu-bars"></i>
     </header>
@@ -49,7 +49,10 @@
 
     <section class="talkboard">
       <div class="talkboard-head">
-        <a href="board_text.html"><span>글쓰기</span></a>
+        <span class="talkboard-head_title">자유게시판</span>
+        <a href="board_text.html"
+          ><span class="talkboard-head_write">글쓰기</span></a
+        >
       </div>
       <div class="talkboard-box">
         <div class="talk-content">
