--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="icons">
         <a href="login.html"><i class="fas fa-user" id="sm-login"></i></a>
-        <i class="fas fa-bars" id="menu-bars"></i>
+        <i class="fas fa-bars header-menu" id="menu-bars"></i>
       </div>
     </header>
 
