--- a/notice.html
+++ b/notice.html
@@ -36,7 +36,7 @@
         <a href="#">공모전</a>
       </nav>
 
-      <span id="header-name">공지사항</span>
+      <a href="index.html"><span id="header-name">셈틀쟁이</span></a>
 
       <i class="fas fa-bars header-menu" id="menu-bars"></i>
     </header>
