--- a/board.html
+++ b/board.html
@@ -36,9 +36,12 @@
         <a href="#">공모전</a>
       </nav>
 
-      <a href="index.html"><span id="header-name">셈틀쟁이</span></a>
+      <span id="header-name">자유게시판</span>
 
-      <i class="fas fa-bars header-menu" id="menu-bars"></i>
+      <div class="icons">
+        <a href="index.html"><i class="fas fa-home" id="home-bar"></i></a>
+        <i class="fas fa-bars header-menu" id="menu-bars"></i>
+      </div>
     </header>
 
     <section class="heading">
@@ -49,7 +52,6 @@
 
     <section class="talkboard">
       <div class="talkboard-head">
-        <span class="talkboard-head_title">자유게시판</span>
         <a href="board_text.html"
           ><span class="talkboard-head_write">글쓰기</span></a
         >
