--- a/login.html
+++ b/login.html
@@ -34,23 +34,13 @@
   <body>
     <header>
       <a href=""></a>
+      <a href=""></a>
 
-      <nav class="navbar">
-        <a href="notice.html">공지사항</a>
-        <a href="board.html">자유게시판</a>
-        <a href="study.html">스터디룸</a>
-        <a href="book.html">책 대여</a>
-        <a href="#">공모전</a>
-      </nav>
-
-      <div class="icons">
-        <a href="index.html"><i class="fas fa-home"></i></a>
-      </div>
     </header>
 
-    <section class="home">
+    <section class="home" id="login-home">
       <div class="home-main">
-        <img src="images/logo.PNG" alt="" />
+        <img src="images/login.PNG" alt="" />
         <a href="index.html"><h3>셈틀쟁이</h3></a>
       </div>
     </section>
@@ -100,7 +90,7 @@
             </div>
           </div>
           <div class="signupform">
-              <a href="#">Sign Up</a>
+              <a href="signup.html">Sign Up</a>
           </div>
         </form>
       </div>
