--- a/study.html
+++ b/study.html
@@ -36,9 +36,12 @@
         <a href="#">공모전</a>
       </nav>
 
-      <a href="index.html"><span id="header-name">셈틀쟁이</span></a>
+      <span id="header-name">스터디룸</span>
 
-      <i class="fas fa-bars header-menu" id="menu-bars"></i>
+      <div class="icons">
+        <a href="index.html"><i class="fas fa-home" id="home-bar"></i></a>
+        <i class="fas fa-bars header-menu" id="menu-bars"></i>
+      </div>
     </header>
 
     <section class="heading">
