--- a/login.html
+++ b/login.html
@@ -38,12 +38,12 @@
 
     </header>
 
-    <section class="home" id="login-home">
+    <a href="index.html"><section class="home" id="login-home">
       <div class="home-main">
         <img src="images/login.PNG" alt="" />
-        <a href="index.html"><h3>셈틀쟁이</h3></a>
+        <h3>셈틀쟁이</h3>
       </div>
-    </section>
+    </section></a>
 
     <section class="login">
       <div class="login-box">
