--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
   <body>
     <header>
       <a href="javascript:history.back();" id="header-before"
-        ><i class="fas fa-angle-left"></i
+        ><i class="fas fa-times"></i
       ></a>
 
       <span id="header-name">회원가입</span>
@@ -44,54 +44,55 @@
       </div>
     </header>
 
-    <section class="join">
-      <div class="joinbox">
-        <form action="#" class="joinform">
-          <table align="center">
-            <tr>
-              <td align="center"><label>이름</label></td>
-              <td class="inputbox"><input type="text" name="name" /></td>
-            </tr>
+    <div class="join">
+      <form action="#" class="joinform">
+        <table align="center">
+          <tr>
+            <td align="center"><label>이름</label></td>
+            <td class="inputbox"><input type="text" name="name" /></td>
+          </tr>
 
-            <tr>
-              <td align="center"><label>학년</label></td>
-              <td class="inputbox">
-                <select name="grade" id="#">
-                  <option value="1gr">1</option>
-                  <option value="2gr">2</option>
-                  <option value="3gr">3</option>
-                  <option value="4gr">4</option>
-                </select>
-              </td>
-            </tr>
+          <tr>
+            <td align="center"><label>학년</label></td>
+            <td class="inputbox">
+              <select name="grade" id="#">
+                <option value="1gr">1</option>
+                <option value="2gr">2</option>
+                <option value="3gr">3</option>
+                <option value="4gr">4</option>
+              </select>
+            </td>
+          </tr>
 
-            <tr>
-              <td align="center"><label>아이디</label></td>
-              <td class="inputbox"><input type="text" name="id" /></td>
-            </tr>
+          <tr>
+            <td align="center"><label>아이디</label></td>
+            <td class="inputbox"><input type="text" name="id" /></td>
+          </tr>
 
-            <tr>
-              <td align="center">
-                <label>비밀번호</label>
-              </td>
-              <td class="inputbox"><input type="password" name="pw" /></td>
-            </tr>
+          <tr>
+            <td align="center">
+              <label>비밀번호</label>
+            </td>
+            <td class="inputbox"><input type="password" name="pw" /></td>
+          </tr>
 
-            <tr>
-              <td align="center">
-                <label>닉네임</label>
-              </td>
-              <td class="inputbox"><input type="text" name="nickname" /></td>
-            </tr>
+          <tr>
+            <td align="center">
+              <label>닉네임</label>
+            </td>
+            <td class="inputbox"><input type="text" name="nickname" /></td>
+          </tr>
 
-            <tr>
-              <td align="center"><label>전화번호</label></td>
-              <td class="inputbox"><input type="tel" name="tel" /></td>
-            </tr>
-          </table>
-        </form>
-      </div>
-    </section>
+          <tr>
+            <td align="center"><label>전화번호</label></td>
+            <td class="inputbox"><input type="tel" name="tel" /></td>
+          </tr>
+        </table>
+        <input type="submit" class="join_btn" value="가입하기">
+        </input>
+        
+      </form>
+    </div>
   </body>
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/script.js" defer></script>
