--- a/notice_text.html
+++ b/notice_text.html
@@ -52,10 +52,9 @@
             </div>
           </div>
           <div class="notice_text-content-main">
-            <pre>
-2022 셈틀 회원 모집! 1~2월 모집 모집!
-              많은 신청 부탁드립니당~
-            </pre>
+            <span>
+              2022 셈틀 회원 모집! 1~2월 모집 모집! 많은 신청 부탁드립니당~
+            </span>
           </div>
           <div class="notice_text-content-foot">
             <div class="notice_text-content-foot-etc"></div>
