--- a/study.html
+++ b/study.html
@@ -55,7 +55,7 @@
         <span>글쓰기</span>
       </div>
       <div class="studyroom-top">
-        <a href="">
+        <a href="study_board.html">
           <div class="studyroom-box">
             <div class="study-content">
               <div class="study-content-head">
