--- a/board.html
+++ b/board.html
@@ -73,7 +73,27 @@
           </div>
           <div class="talk-content-foot">
             <div class="talk-content-foot-etc">
-              <span>댓글<i class="far fa-comment-dots talk-comment"></i></span>
+              <i class="far fa-comment-dots talk-comment"></i>
+              <span class="abc">댓글 3</span>
+            </div>
+            <div class="talk-content-comment">
+              <div class="talk-content-commentbox">
+                <div class="talk-content-comment-text">
+                  <span>오~~ 좋아요~!!</span>
+                </div>
+                <div class="talk-content-comment-icon">
+                  <i class="fas fa-times"></i>
+                </div>
+              </div>
+
+              <div class="talk-content-commentbox">
+                <div class="talk-content-comment-text">
+                  <span>오~~ 좋아요~!!</span>
+                </div>
+                <div class="talk-content-comment-icon">
+                  <i class="fas fa-times"></i>
+                </div>
+              </div>
             </div>
           </div>
         </div>
