--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@
       <span id="header-name">회원가입</span>
 
       <div class="icons">
-        <a href="index.html"><i class="fas fa-home header-menu"></i></a>
+        <a href="index.html"><i class="fas fa-home" id="join-home"></i></a>
       </div>
     </header>
 
