--- a/study_board_room.html
+++ b/study_board_room.html
@@ -38,7 +38,9 @@
 
       <span id="header-name">스터디룸</span>
 
-      <i class="fas fa-bars header-menu" id="menu-bars"></i>
+      <div class="icons">
+        <i class="fas fa-bars header-menu" id="menu-bars"></i>
+      </div>
     </header>
 
     <section class="notice_text">
