--- a/board.html
+++ b/board.html
@@ -64,6 +64,9 @@
               <span>역곡불주먹</span>
               <span>01.08</span>
             </div>
+            <div class="talk-content-head3">
+              <a href="comment.html"><i class="fas fa-ellipsis-v"></i></a>
+            </div>
           </div>
           <div class="talk-content-main">
             <span
@@ -73,9 +76,11 @@
           </div>
           <div class="talk-content-foot">
             <div class="talk-content-foot-etc">
-              <i class="far fa-comment-dots talk-comment"></i>
-              <span class="abc">댓글 3</span>
+              <span class="comment"
+                >댓글<i class="far fa-comment-dots talk-comment"></i
+              ></span>
             </div>
+
             <div class="talk-content-comment">
               <div class="talk-content-commentbox">
                 <div class="talk-content-comment-text">
@@ -94,6 +99,9 @@
                   <i class="fas fa-times"></i>
                 </div>
               </div>
+              <form action="" class="commentwrite-form">
+                <input type="text" class="commentwrite" />
+              </form>
             </div>
           </div>
         </div>
