--- a/index.html
+++ b/index.html
@@ -76,23 +76,23 @@
         <a href="notice.html"><i class="fas fa-angle-right"></i></a>
       </div>
 
-      <div class="notice-box notice-box1">
-        <div class="notice-heading notice-heading1">
+      <div class="notice-box">
+        <div class="notice-heading">
           <h3>셈틀쟁이는 어떤 학회인가요?</h3>
           <i class="fas fa-angle-down"></i>
         </div>
-        <div class="notice-content notice-content1">
+        <div class="notice-content" id="thisone">
           <p>안녕하세요. 셈틀쟁이입니다. 환영해요!! 셈-하!!</p>
         </div>
       </div>
 
-      <div class="notice-box notice-box2">
-        <div class="notice-heading notice-heading2">
-          <h3>셈틀쟁이 웹은 어떻게 이용하나요?</h3>
+      <div class="notice-box">
+        <div class="notice-heading">
+          <h3>셈틀쟁이 가입은 어떻게 하나요?</h3>
           <i class="fas fa-angle-down"></i>
         </div>
-        <div class="notice-content notice-content2">
-          <p>안녕하세요. 셈틀쟁이입니다. 환영해요!! 셈-하!!</p>
+        <div class="notice-content">
+          <p>가입 문자 전화 디엠 주세요 ㅋㅋ</p>
         </div>
       </div>
     </section>
@@ -206,5 +206,5 @@
     </footer>
   </body>
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-  <script src="js/script.js" defer></script>
+  <script src="js/script.js"></script>
 </html>
