--- a/signup.html
+++ b/signup.html
@@ -53,6 +53,11 @@
           </tr>
 
           <tr>
+            <td align="center"><label>학번</label></td>
+            <td class="inputbox"><input type="number" name="studentid" /></td>
+          </tr>
+
+          <tr>
             <td align="center"><label>학년</label></td>
             <td class="inputbox">
               <select name="grade" id="#">
@@ -83,10 +88,6 @@
             <td class="inputbox"><input type="text" name="nickname" /></td>
           </tr>
 
-          <tr>
-            <td align="center"><label>전화번호</label></td>
-            <td class="inputbox"><input type="tel" name="tel" /></td>
-          </tr>
         </table>
         <input type="submit" class="join_btn" value="가입하기">
         </input>
