--- a/board.html
+++ b/board.html
@@ -59,13 +59,17 @@
       <div class="talkboard-box">
         <div class="talk-content">
           <div class="talk-content-head">
-            <img src="images/char.PNG" alt="" />
-            <div class="talk-content-head2">
-              <span>역곡불주먹</span>
-              <span>01.08</span>
+            <div class="talk-content-left">
+              <img src="images/char.PNG" alt="" />
+              <div class="talk-content-head2">
+                <span>역곡불주먹</span>
+                <span>01.08</span>
+              </div>
             </div>
-            <div class="talk-content-head3">
-              <a href="comment.html"><i class="fas fa-ellipsis-v"></i></a>
+            <div class="talk-content-right">
+              <div class="talk-content-head3">
+                <a href="comment.html"><i class="fas fa-ellipsis-v"></i></a>
+              </div>
             </div>
           </div>
           <div class="talk-content-main">
