--- a/book.html
+++ b/book.html
@@ -57,7 +57,8 @@
             type="text"
             placeholder="책 이름을 입력해주세요"
             class="booksearch"
-          /><i class="fas fa-search"></i>
+          />
+          <a href="book_takeout.html"><i class="fas fa-search"></i></a>
         </form>
       </div>
     </section>
