--- a/book_takeout.html
+++ b/book_takeout.html
@@ -46,7 +46,7 @@
 
     <section class="heading">
       <div class="heading-box">
-        <span>printf("셈회원들이 자유롭게 책 대여하는 공간이에요")</span>
+        <span>대출 or 예약 눌러주십샤</span>
       </div>
     </section>
 
