--- a/book.html
+++ b/book.html
@@ -52,7 +52,7 @@
 
     <section class="bookboard talkboard">
       <div class="bookboard-head talkboard-head">
-        <form action="">
+        <form action="" class="booksearch_form">
           <input
             type="text"
             placeholder="책 이름을 입력해주세요"
@@ -153,92 +153,32 @@
       </div>
     </section>
 
-    <section class="bookboard book">
-      <div class="swiper book-box">
-        <div class="swiper-wrapper book-wrapper">
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-1.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
-              </div>
-            </div>
-          </div>
+    <div class="takeoutbox-head">
+      <span>상세 정보</span>
+    </div>
 
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-2.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-3.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-4.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-4.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/pic-4.png" alt="" />
-            </div>
-            <div class="content">
-              <h3>c언어</h3>
-              <div class="content_info">
-                <h2>김대현</h2>
-                <h2>/</h2>
-                <h2>출판사</h2>
-              </div>
-            </div>
-          </div>
+    <section class="takeoutbox">
+      <div class="takeoutbox-left">
+        <div class="takeout-image">
+          <img src="images/pic-1.png" alt="" />
+        </div>
+      </div>
+      <div class="takeoutbox-right">
+        <div class="takeoutbox-title">
+          <span>C언어 일취월장</span>
+        </div>
+        <div class="takeoutbox-info">
+          <span>지은이</span>
+          <span>|</span>
+          <span>출판사</span>
+        </div>
+        <div class="takeoutbox-state">
+          <span>대출상태 : </span>
+          <span class="state_text">대출가능</span>
+        </div>
+        <div class="takeoutbox-btn">
+          <button class="takeout_btn">대출하기</button>
+          <button class="reserve_btn">예약하기</button>
         </div>
       </div>
     </section>
