--- a/book.html
+++ b/book.html
@@ -63,6 +63,40 @@
       </div>
     </section>
 
+    <div class="takeoutbox-head">
+      <span>책 상세 정보</span>
+    </div>
+
+    <section class="takeoutbox">
+      <div class="takeoutbox-left">
+        <div class="takeout-image">
+          <img src="images/pic-1.png" alt="" />
+        </div>
+      </div>
+      <div class="takeoutbox-right">
+        <div class="takeoutbox-title">
+          <span>C언어 일취월장</span>
+        </div>
+        <div class="takeoutbox-info">
+          <span>지은이</span>
+          <span>|</span>
+          <span>출판사</span>
+        </div>
+        <div class="takeoutbox-state">
+          <span>대출상태 : </span>
+          <span class="state_text">대출가능</span>
+        </div>
+        <div class="takeoutbox-btn">
+          <button class="takeout_btn">대출하기</button>
+          <button class="reserve_btn">예약하기</button>
+        </div>
+      </div>
+    </section>
+
+    <div class="takeoutbox-head">
+      <span>책 목록</span>
+    </div>
+
     <section class="bookboard book">
       <div class="swiper book-box">
         <div class="swiper-wrapper book-wrapper">
@@ -149,36 +183,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="takeoutbox-head">
-      <span>상세 정보</span>
-    </div>
-
-    <section class="takeoutbox">
-      <div class="takeoutbox-left">
-        <div class="takeout-image">
-          <img src="images/pic-1.png" alt="" />
-        </div>
-      </div>
-      <div class="takeoutbox-right">
-        <div class="takeoutbox-title">
-          <span>C언어 일취월장</span>
-        </div>
-        <div class="takeoutbox-info">
-          <span>지은이</span>
-          <span>|</span>
-          <span>출판사</span>
-        </div>
-        <div class="takeoutbox-state">
-          <span>대출상태 : </span>
-          <span class="state_text">대출가능</span>
-        </div>
-        <div class="takeoutbox-btn">
-          <button class="takeout_btn">대출하기</button>
-          <button class="reserve_btn">예약하기</button>
         </div>
       </div>
     </section>
