--- a/book.html
+++ b/book.html
@@ -78,13 +78,19 @@
           <span>C언어 일취월장</span>
         </div>
         <div class="takeoutbox-info">
-          <span>지은이</span>
-          <span>|</span>
-          <span>출판사</span>
+          <span>저자 </span>
+          <span class="info_slash">|</span>
+          <span>김대현</span>
         </div>
         <div class="takeoutbox-state">
-          <span>대출상태 : </span>
+          <span>대출상태</span>
+          <span class="info_slash">|</span>
           <span class="state_text">대출가능</span>
+        </div>
+        <div class="takeoutbox-count">
+          <span>대출가능 수량</span>
+          <span class="info_slash">|</span>
+          <span>2</span>
         </div>
         <div class="takeoutbox-btn">
           <button class="takeout_btn">대출하기</button>
