--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="member-main2">
-          <img src="images/char.PNG" alt="" />
+          <a href="mypage.html"><img src="images/char.PNG" alt="" /></a>
         </div>
       </div>
     </section>
