--- a/mypage.html
+++ b/mypage.html
@@ -71,24 +71,29 @@
     </section>
 
     <section class="mypage-content">
-      <div class="mypage-content-icon">
-        <div class="mypage-content-icon-left">
-          <i class="fas fa-user-edit"></i>
-          <span>정보 수정</span>
+      <a href="mypage_info.html">
+        <div class="mypage-content-icon">
+          <div class="mypage-content-icon-left">
+            <i class="fas fa-user-edit"></i>
+            <span>정보 수정</span>
+          </div>
+          <div class="mypage-content-icon-right">
+            <i class="fas fa-angle-right"></i>
+          </div></div
+      ></a>
+
+      <a href="mypage_book.html">
+        <div class="mypage-content-icon">
+          <div class="mypage-content-icon-left">
+            <i class="fas fa-book"></i>
+            <span>대여한 책</span>
+          </div>
+          <div class="mypage-content-icon-right">
+            <i class="fas fa-angle-right"></i>
+          </div>
         </div>
-        <div class="mypage-content-icon-right">
-          <i class="fas fa-angle-right"></i>
-        </div>
-      </div>
-      <div class="mypage-content-icon">
-        <div class="mypage-content-icon-left">
-          <i class="fas fa-book"></i>
-          <span>대여한 책</span>
-        </div>
-        <div class="mypage-content-icon-right">
-          <i class="fas fa-angle-right"></i>
-        </div>
-      </div>
+      </a>
+
       <div class="mypage-content-icon">
         <div class="mypage-content-icon-left">
           <i class="far fa-edit"></i>
@@ -101,7 +106,7 @@
       <div class="mypage-content-icon">
         <div class="mypage-content-icon-left">
           <i class="fas fa-comment"></i>
-          <span>내가 쓴 댓글</span>
+          <span>댓글 단 글</span>
         </div>
         <div class="mypage-content-icon-right">
           <i class="fas fa-angle-right"></i>
